fix geolocate on firefox by setting div to inline-block

--- a/src/components/iphonesettings/style.less
+++ b/src/components/iphonesettings/style.less
@@ -43,6 +43,7 @@
 
 .locationWrapper {
   position: relative;
+  display: inline-block;
 }
 
 .geolocate {
